<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/text_header">

        <ListPreference
            app:dialogTitle="@string/textSize_dialog"
            app:entries="@array/textSize_entries"
            app:key="text_size"
            app:summary="@string/textSize_summary"
            app:title="@string/textSize_title"
            app:entryValues="@array/textSize_values"/>

        <ListPreference
            app:key="lang"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:summary="@string/lang_summary"
            app:title="@string/lang_title"
            app:dialogTitle="@string/lang_dialog"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/lang_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />


    </PreferenceCategory>

</PreferenceScreen>
